[gd_scene load_steps=22 format=2]

[ext_resource path="res://water.tscn" type="PackedScene" id=1]
[ext_resource path="res://Pot.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/HUD/button_green_big.png" type="Texture" id=3]
[ext_resource path="res://treeDex.tscn" type="PackedScene" id=4]
[ext_resource path="res://startUP.gd" type="Script" id=5]
[ext_resource path="res://BaseFarmGrid.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Art/merge_container_ui.png" type="Texture" id=7]
[ext_resource path="res://Fonts/Itim-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Assets/Art/lab_background.png" type="Texture" id=9]
[ext_resource path="res://Assets/Art/arboretum_background.png" type="Texture" id=10]
[ext_resource path="res://Assets/HUD/gear.png" type="Texture" id=11]
[ext_resource path="res://Assets/HUD/button_green.png" type="Texture" id=12]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 300, 100 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 300, 100 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 300, 100 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 300, 100 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 300, 100 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 300, 100 )

[sub_resource type="DynamicFont" id=8]
size = 50
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 150, 50 )

[node name="Planting" type="Node2D"]
script = ExtResource( 5 )

[node name="Pot" parent="." instance=ExtResource( 2 )]
position = Vector2( 960, 595.5 )

[node name="water" parent="." instance=ExtResource( 1 )]
position = Vector2( 1400, 150 )

[node name="Seeds" type="Control" parent="."]
margin_left = -0.212673
margin_top = 0.212671
margin_right = 39.7873
margin_bottom = 40.2127
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mergeBackground1" type="Sprite" parent="Seeds"]
position = Vector2( 425, 595.5 )
texture = ExtResource( 7 )

[node name="mergeBackground2" type="Sprite" parent="Seeds"]
position = Vector2( 1495, 595.5 )
texture = ExtResource( 7 )

[node name="treeDex" parent="." instance=ExtResource( 4 )]
pause_mode = 2
visible = false
margin_left = 1.59003
margin_right = 1.59003

[node name="treeDex_button" type="Button" parent="."]
margin_left = 830.0
margin_top = 100.0
margin_right = 1130.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 100 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TreeDex"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaseFarmGrid" parent="." instance=ExtResource( 6 )]

[node name="FarmButton" type="Button" parent="."]
margin_left = 200.0
margin_top = 100.0
margin_right = 500.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 100 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Farm"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" type="Button" parent="."]
margin_left = 1645.0
margin_top = 105.0
margin_right = 1730.0
margin_bottom = 190.0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 9 )
icon = ExtResource( 11 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labBackground" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 960, 540.77 )
texture = ExtResource( 9 )

[node name="arboretumBackground" type="Sprite" parent="."]
visible = false
show_behind_parent = true
position = Vector2( 960, 540 )
texture = ExtResource( 10 )
[connection signal="area_shape_entered" from="Pot" to="Pot" method="_on_Pot_area_shape_entered"]
[connection signal="pressed" from="treeDex_button" to="." method="_on_treeDex_button_pressed"]
[connection signal="add_seeds" from="BaseFarmGrid" to="." method="_new_seed"]
[connection signal="return_to_planting" from="BaseFarmGrid" to="." method="_return_to_planting"]
[connection signal="pressed" from="FarmButton" to="." method="_on_FarmButton_pressed"]
[connection signal="pressed" from="PauseButton" to="." method="_on_PauseButton_pressed"]
